Added H1, and header content

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="container">
         <navbar class="navbar">
             <div class="left-container">
-                <div class="logo-container"><img src="img/chime logo.png" alt="Chime logo" class="logo"></div>
+                <div class="logo-container"><a href="index.html"><img src="img/chime logo.png" alt="Chime logo" class="logo"></a></div>
                 <ul class="links">
                     <li><a href="#">Benefits</a></li>
                     <li><a href="#">Accounts</a></li>
@@ -25,7 +25,19 @@
                 <button class="get-started-btn">Get Started</button>
             </div>
         </navbar>
+        <div class="content-header">
+                <h1>Banking that has <br>
+                    your back</h1>
+                <div class="apply-container">
+                    <input type="text" name="email" id="email-txt" placeholder="Enter your email">
+                    <button class="apply-btn">Apply Now</button>
+                </div>
+                <a href="#" class="account">Already have an account?›</a>
+                <p>Learn how we collect and use your information by visiting our <a href="#"><strong>Privacy Policy›</strong></a></p>
+                <p>Chime is a financial technology company, not a bank. Banking services provided by  <br>
+                    The Bancorp Bank or Stride Bank, N.A.; Members FDIC</p>
+            </div>
+        </div>
     </header>
-    
 </body>
 </html>
