Finished header --- added sponsor logos  and styled content

--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
                     The Bancorp Bank or Stride Bank, N.A.; Members FDIC</p>
             </div>
         </div>
+        <div class="sponsors">
+            <ul class="links">
+                <li><img src="img/WSJ.png" alt="WSJ logo"></li>
+                <li><img src="img/Forbes.png" alt="Forbes logo"></li>
+                <li><img src="img/NYT.png" alt="NYT logo"></li>
+                <li><img src="img/usatoday.png" alt="USAToday logo"></li>
+                <li><img src="img/TC.png" alt="TC logo"></li>
+            </ul>
+        </div>
     </header>
 </body>
 </html>
