Added 2 content sections

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Chime Replica</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/app.js" defer></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="container">
@@ -48,5 +49,22 @@
             </ul>
         </div>
     </header>
+    <div class="content-container">
+        <h2>Overdraft fee-free <br>
+            with SpotMe</h2>
+        <p>We’ll spot you up to $200 on debit card purchases with <br>
+             no overdraft fees. Eligibility requirements <br>
+             apply.¹</p>
+        <a class="container-a" href="#">Learn About SpotMe›</a>
+    </div>
+    <div class="container-set">
+        <div class="img-container"></div>
+        <div class="content-containers">
+            <h2>Get paid early</h2>
+            <p>Set up direct deposit and get your paycheck up to <br>
+                2 days earlier than some of your co-workers!2</p>
+                <a class="container-a" href="#">Learn About Early Direct Deposit›</a>
+        </div>
+    </div>
 </body>
 </html>
